2004-04-15  Kees Cook <kees@outflux.net>

	* debian/control, debian/changes: dropping (currently) unused
	  dependancies.  Added "0.39cvs" tag.

2004-04-15  Carl Hetherington <inkscape@carlh.net>

	* src/seltrans.cpp, src/helper/sodipodi-ctrlrect.cpp,
	src/helper/sodipodi-ctrlrect.h:
	  Use black, dashed bounding boxes for indicating itemselection,
	  rather than red, solid boxes (as suggested by Bulia).

	* src/desktop.cpp:
	Small fix for the problem whereby the first file loaded in an
	Inkscape session will not have its grid set up properly.  This was
	my patch #935013.

	* src/dialogs/filedialog-win32.cpp:
	Use the extension system to build the list of allowable file types
	for save.  This means that save as PS and EPS work properly.

	* src/streams-zlib.cpp, src/livarot/PathConversion.cpp,
	src/livarot/PathCutting.cpp, src/livarot/PathSimplify.cpp,
	src/livarot/PathStroke.cpp, src/livarot/Shape.cpp,
	src/livarot/ShapeMisc.cpp, src/display/nr-arena-glyphs.cpp,
	src/helper/sodipodi-ctrlrect.cpp, src/helper/sp-canvas.cpp,
	src/extension/internal/win32.cpp:
	Fix compiler warnings, mostly about unused variables.

	* src/helper/sp-canvas-util.cpp:
	Fix what I and someone else considered to be an obvious typo.  The
	function in question isn't used, however, so it's a bit difficult
	to test.

	* src/libnrtype/nr-rasterfont.cpp:
	Fix a warning wrt a cast from NR::Matrix to NRMatrix.

	* src/sp-shape.cpp:
	Fix bug #935758.
	

2004-04-14  Ted Gould <ted@gould.cx>

	* src/file.cpp, dialogs/filedialog.cpp:
	Making it so that the filename will get placed in the save as dialog
	if there is a name for the file.  Otherwise the last save directory
	is used (properly now)

2004-04-15  MenTaLguY <mental@rydia.net>

	* most files in src/: removed many old "compatable" struct typedefs

	* src/libarikkei/arikkei-dict.cpp, src/libarikkei/arikkei-dict.h:
	  removed unused arikkei files

	* configure.in: added gtkmm dependency

2004-04-14  Kees Cook <kees@outflux.net>
