@@ -1,3 +1,8 @@
+2004-04-16  MenTaLguY <mental@rydia.net>
+
+    * src/selection.cpp, src/selection.h, src/forward.h: initial
+	  C++ification of SPSelection class
+
 2004-04-15  Kees Cook <kees@outflux.net>
 
 	* debian/control, debian/changes: dropping (currently) unused
